tests/machine/x/pascal/dataset_where_filter.error
line: 61
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/dataset_where_filter.pas
dataset_where_filter.pas(52,20) Error: Incompatible types: got "Constant String" expected "LongInt"
dataset_where_filter.pas(56,20) Error: Incompatible types: got "Constant String" expected "LongInt"
dataset_where_filter.pas(61) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

